--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,6 +1,3 @@
-
-<h5>Basic</h5>
-
 <p-button
 class ="btn1"
   (click)=showDialog()
@@ -77,6 +74,13 @@ class ="btn1"
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
     font-size: 15px;
     text-decoration:none; margin-left: 8em; margin-top: 1em;" (click)=storeData(productsform.value)> Save
+</button>
+
+<button style="background-color: #47AB11; color: #fff ; outline: none;
+  border: none;  border-radius: 4px;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+    font-size: 14px;
+    text-decoration:none; margin-left: 2em; margin-top: 1em;" (click) = dispdata()> Details
 </button>
 
 </p-dialog>
